# gprof2dot

./: .editorconfig  .gitignore  .hgignore  .travis.yml  MANIFEST.in  README-CHANGES.md  README.markdown  README.md  debug.py  gprof2dot.py  hotshotmain.py  lsprof2dot.py  schema.json  setup.cfg  setup.py  tox.ini  xdot.py
.circleci/: config.yml
.github/workflows/: build.yml  testOnly.yml
tests/: .gitattributes  .gitignore  apitrace.sleepy  cycle.prof  empty.callgrind  gallium.oprofile  gallium.oprofile-xml  glxgears.perf  gnu1.prof  gnu2.prof  hadoop.hprof  hotshot.pstats  hpasanen.prof  ibm.prof  jdbc.hprof  memtrail.maximum.json  nautilus.sysprof  nucleotide.axe  profile.pstats  runtests.sh  selinux.callgrind  test.py  test_main.py  transmission.shark  val3.c  val3_gprof.prof  val3_sleepy.sleepy  val3_xperf.xperf  x11perf.oprofile  xapian.callgrind
tests/axe/: r000hs_gprof_cc.axe  r000hs_vtune_gprof_2013.axe  r000hs_vtune_gprof_2015.axe
tests/callgrind/: bool.callgrind  bzr.callgrind  googlecode-issue34.callgrind  issue35.callgrind  issue98.callgrind
tests/collapse/: digits.collapse  keywords.collapse  synapse.collapse
tests/compare/axe/test/: test1.txt  test2.txt
tests/compare/callgrind/test/: test1.callgrind  test2.callgrind
tests/dmd/: dub.dmd  profdump.dmd  simple.dmd
tests/dtrace/: go.dtrace  rust.user_stacks
tests/json/: cycle.json  diamond.json  empty.json  memtrail.leaked.json
tests/perf/: issue28-c++filt.perf  issue28.perf  xwax.perf
tests/prof/: dan.skorupski.prof  darwin.prof  embedded.prof  issue88.prof  shedskin.prof  zeros.prof
tests/pstats/: .gitignore  cProfile.orig.dot  cProfile.pstats  function-list.orig.txt  memtrail.pstats
(+4 files in other folders)
