[metadata]
name = gprof2dot
version = 2022.07.29
author = Jose Fonseca
author_email = jose.r.fonseca@gmail.com
url = https://github.com/jrfonseca/gprof2dot
description = Generate a dot graph from the output of several profilers.
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
py_modules = gprof2dot
python_requires = >=2.7

[options.entry_points]
console_scripts =
    gprof2dot = gprof2dot:main

[bdist_wheel]
universal=1
